[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ships/ShipDesignView.gd" type="Script" id=1]
[ext_resource path="res://ui/ships/ShipyardEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://places/SpaceBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/ships/ShipDesignViewport.gd" type="Script" id=4]

[sub_resource type="World" id=1]
environment = ExtResource( 2 )

[node name="ShipDesignView" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ShipLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 0.621162, 0.258923, -0.739673, 0.0939634, 0.912428, 0.398304, 0.778029, -0.316914, 0.542436, 4.901, 30, 9.824 )
light_indirect_energy = 0.0
light_cull_mask = 4293918723
shadow_bias = 2.0
shadow_contact = 12.0

[node name="SpaceBackground" parent="Viewport" instance=ExtResource( 3 )]
transform = Transform( 0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, -10, 0 )

[node name="Red" type="OmniLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 500, 0 )
layers = 2147483656
light_color = Color( 0.996078, 0.278431, 0.137255, 1 )
light_energy = 3.0
light_cull_mask = 4293918728
shadow_color = Color( 1, 0, 0, 1 )
omni_range = 1000.0
omni_attenuation = 0.017337
omni_shadow_mode = 0

[node name="White" type="OmniLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 500, 0 )
layers = 2147483656
light_color = Color( 0.952941, 0.972549, 0.894118, 1 )
light_energy = 2.0
light_cull_mask = 4293918736
shadow_color = Color( 1, 0, 0, 1 )
omni_range = 1000.0
omni_attenuation = 0.017337
omni_shadow_mode = 0

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 30, 0 )
projection = 1
current = true
size = 10.0

[node name="MountPoints" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )

[node name="Installed" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )
script = ExtResource( 4 )

[connection signal="resized" from="." to="." method="_on_ViewportContainer_resized"]
